Attempt to fix chart stretching

--- a/app/scss/components.scss
+++ b/app/scss/components.scss
@@ -272,8 +272,3 @@ blockquote {
 		margin-bottom: 0 !important;
 	}
 }
-
-.chart {
-	width: 100%;
-	min-height: 400px;
-}
